# hey24

./: index.html  package-lock.json  package.json
.superpowers/brainstorm/67690-1782207498/content/: architecture-approaches.html
.superpowers/brainstorm/67690-1782207498/state/: server-stopped
.superpowers/brainstorm/7844-1782212872/state/: server-info
docs/superpowers/plans/: 2026-06-23-silent-grow-plan.md
docs/superpowers/specs/: 2026-06-23-silent-grow-design.md
scripts/: download-model.sh
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/engine/: align.rs  face.rs  mod.rs  render.rs  template.rs
src-tauri/templates/: silent-grow.yaml
src-tauri/tests/: integration_test.rs
src/components/: FaceSelector.vue  PhotoCard.vue  PhotoTimeline.vue  PreviewPanel.vue  StatusBar.vue  TemplateList.vue
src/stores/: project.ts
src/types/: index.ts
