[package]
name = "hey24"
version = "0.1.0"
description = "Hey24 - macOS desktop video clipping tool"
authors = ["you"]
license = ""
repository = ""
default-run = "hey24"
edition = "2021"
rust-version = "1.77"

[lib]
name = "hey24_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
