[package]
name = "hey24"
version = "0.1.0"
description = "Hey24 - macOS desktop video clipping tool"
authors = ["you"]
license = ""
repository = ""
default-run = "hey24"
edition = "2021"
rust-version = "1.77"

[lib]
name = "hey24_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
image = "0.25"
nalgebra = "0.33"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
